syntax = "proto3";

package voucherservice.proto.user.v1;

import "google/protobuf/timestamp.proto";

service VoucherService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc GetByUserID(GetByUserIDRequest) returns (GetByUserIDResponse) {}
}

// Voucher represents a voucher.
message Voucher {
  int64 id = 1;
  int64 user_id = 2;
  string value = 3;
  google.protobuf.Timestamp created_at = 4;
}

message GetByUserIDRequest {
  int64 user_id = 1;
}

message GetByUserIDResponse {
  Voucher voucher = 1;
}

message CreateRequest {
  int64 user_id = 1;
}

message CreateResponse {
  Voucher voucher = 1;
}